@@ -10,6 +10,7 @@
 #include "stm32f0xx.h"
 #include "gpio.h"
 #include <stdint.h>
+#include <stddef.h>
 
 /**
  * @brief Here are two modes only: out push/pull and in for button.
@@ -27,6 +28,11 @@ typedef struct
 	Gpio_Mode_t Mode;
 } Gpio_Hal_t;
 
+static const uint8_t B0_Pin = 9;
+static const uint8_t B1_Pin = 10;
+static volatile Buttons_Callback_t Buttons_CallBack_Stored = NULL;
+
+
 static const Gpio_Hal_t Gpios[GPIO_TOTAL]=
 {
 		[GPIO_CH0] = 			{.port = GPIOA,.Pin = 0	,	.Mode = GPIO_MODE_OUT},
@@ -42,8 +48,38 @@ static const Gpio_Hal_t Gpios[GPIO_TOTAL]=
 		[GPIO_BUTTON_COLD] 	= 	{.port = GPIOA,.Pin = 10,	.Mode = GPIO_MODE_IN }
 };
 
+void EXTI4_15_IRQHandler(void);
 
-void Gpio_Init(void)
+void EXTI4_15_IRQHandler(void)
+{
+	if ((EXTI->PR & ( 1u << B0_Pin)) != 0)
+	{
+		if (Buttons_CallBack_Stored != NULL)
+		{
+			(*Buttons_CallBack_Stored)(BUTTON_0);
+			EXTI->PR |= (1u << B0_Pin);
+		}
+	}
+	if ((EXTI->PR & ( 1u << B1_Pin)) != 0)
+	{
+		if (Buttons_CallBack_Stored != NULL)
+		{
+			(*Buttons_CallBack_Stored)(BUTTON_1);
+			EXTI->PR |= (1u << B1_Pin);
+		}
+	}
+
+}
+static void Exti_Init(void)
+{
+	/* PA9 and PA10 are exti events for starting sequence. We need event + interrupt */
+	EXTI->IMR |= (1u << B0_Pin) | (1u << B1_Pin); /* Interrupt mask RM 11.3 */
+	EXTI->EMR |= (1u << B0_Pin) | (1u << B1_Pin); /* Event mask RM 11.3 */
+	EXTI->RTSR &= ~((1u << B0_Pin) | (1u << B1_Pin)); /* No rising edge */
+	EXTI->FTSR |= (1u << B0_Pin) | (1u << B1_Pin); /* Falling edge */
+}
+
+void Gpio_Init(const Buttons_Callback_t Buttons_CallBack)
 {
 	RCC->AHBENR |= RCC_AHBENR_GPIOAEN | RCC_AHBENR_GPIOBEN;
 	for (Gpio_id_t id = 0; id < GPIO_TOTAL; id++)
@@ -52,6 +88,8 @@ void Gpio_Init(void)
 		if (GPIO_MODE_IN == Gpio->Mode)
 		{
 			Gpio->port->MODER &= ~(GPIO_MODER_MODER0 << (Gpio->Pin * 2)); /* in */
+			Gpio->port->PUPDR &= ~(GPIO_PUPDR_PUPDR0_1 << (Gpio->Pin * 2)); /* Pull-up */
+			Gpio->port->PUPDR |= GPIO_PUPDR_PUPDR0_0 << (Gpio->Pin * 2);
 
 		}
 		else
@@ -62,6 +100,9 @@ void Gpio_Init(void)
 			Gpio->port->OSPEEDR &= ~(GPIO_OSPEEDER_OSPEEDR0_0 << (Gpio->Pin * 2)); /* Low speed */
 		}
 	}
+	Exti_Init();
+	Buttons_CallBack_Stored = Buttons_CallBack;
+	NVIC_EnableIRQ(EXTI4_15_IRQn);
 }
 
 void Gpio_Set_Pin(const Gpio_id_t Id)
